# Manual-Maker

./: .replit  Img_expraction.py  README.md  app.py  download_template.py  manual_generator.py  pdf_doc_extractor.py  pptx_data_processing.py  project_details.py  pyproject.toml  try.py  utils.py
